Fix WCAG gaps (#2921)
* Make front page title to be h1 instead of h2.

* Changed primary, secondary colors and h1 style to match contrast levels.

* Changed colorizer default scheme to match WCAG contrast rules.

* Changed background color for frontpage hero component.

* Changed button background color on hero component in front page.

* Compiled homepage styles.

* Fixed contrast of group membership color text.

* Fixed colors of datasets count and csv badges on search page.

* Compiled css for search page.

* Changed csv and zip badges color to match WCAG AAA contrast level.

* Changed secondary color to match WCAG AAA contrast level.

* Changed group membership label color to match WCAG AAA contrast level.

* Compiled styles.

* Addressing WCAG error of anchor element without link text

--- a/themes/nuboot_radix/scss/components/_search.scss
+++ b/themes/nuboot_radix/scss/components/_search.scss
@@ -98,7 +98,7 @@
   .group-membership {
     font-size: 0.9em;
     font-style: italic;
-    color: #999;
+    color: #595959;
     margin-bottom: 0.5em;
     &:before {
       content: "\e981";
